[package]
name = "hello-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.2.4"
dioxus-desktop = "0.2.3"



[patch.crates-io]
dioxus = { git = "https://github.com/dvc94ch/dioxus", branch = "master" }
dioxus-desktop = { git = "https://github.com/dvc94ch/dioxus", branch = "master" }

[patch.'https://github.com/tauri-apps/tao']
tao = { git = "https://github.com/dvc94ch/tao", branch = "master" }

[patch.'https://github.com/tauri-apps/wry']
wry = { git = "https://github.com/dvc94ch/wry", branch = "master" }
